# c-logger

./: .gitignore  CMakeLists.txt  README.md  build.sh
c-logger/: CMakeLists.txt  c-logger.c  c-logger.h
tests/: CMakeLists.txt  c_logger_test.c
